working for flask server

--- a/.virtual_documents/chesslytics.ipynb
+++ b/.virtual_documents/chesslytics.ipynb
@@ -183,7 +183,7 @@ def fetch_all_games_for_last_year(username, game_filter=None):
 import os  # Add this import at the top
 
 # Ensure the directory exists
-output_dir = 'images/'
+output_dir = 'static/images/'
 os.makedirs(output_dir, exist_ok=True)
 
 
@@ -347,14 +347,42 @@ def extract_moves_and_timestamps(game_data):
     return white_moves, black_moves
 
 def format_single_time_control(time_control):
-    if '+' in time_control:
-        base, increment = time_control.split('+')
-    else:
-        base, increment = time_control, '0'
+    """
+    Formats the time control into a user-friendly string.
+    Handles cases with very short time controls like 1 second games.
     
-    minutes = int(base) // 60
-    seconds = int(increment)
-    return f"{minutes} + {seconds}"
+    Args:
+        time_control (str): Time control string in the format "base+increment" (e.g., "60+1").
+    
+    Returns:
+        str: Formatted time control string.
+    """
+    if '/' in time_control:
+        # Handle Chess.com's daily format like "1/259200"
+        parts = time_control.split('/')
+        if len(parts) == 2 and parts[0].isdigit() and parts[1].isdigit():
+            days = int(parts[0]) / (int(parts[1]) / 86400)  # Convert fraction to days
+            return f"{days:.1f} day(s) per move"
+        else:
+            return f"Unrecognized format: {time_control}"
+    if '+' in time_control:
+        base, increment = map(int, time_control.split('+'))
+    else:
+        #print(f"Testing Time_Control Value {time_control}")
+        base, increment = int(time_control), 0
+
+    # Convert base time to minutes and seconds
+    minutes = base // 60
+    seconds = base % 60
+    
+    if minutes > 0:
+        base_str = f"{minutes}m {seconds}s" if seconds > 0 else f"{minutes}m"
+    else:
+        base_str = f"{seconds}s"
+    
+    increment_str = f"{increment}s" if increment > 0 else "0s"
+
+    return f"{base_str} + {increment_str}"
     
 
 def convert_to_est(time_str):
@@ -371,6 +399,7 @@ def fetch_and_process_game_data(username, engine_path="/opt/homebrew/bin/stockfi
     all_games = fetch_all_games_for_last_year(username) ## change to current year if necessary
     game_data = []
 
+    #print(all_games[0].keys())
     
 
     # Find columns with some missing values
@@ -378,19 +407,15 @@ def fetch_and_process_game_data(username, engine_path="/opt/homebrew/bin/stockfi
 
     for game in all_games:
         # Extract PGN metadata
-        '''empty_keys = [key for key, value in game.items() if value is None]
-        partially_empty_keys = [key for key in game if isinstance(game[key], dict) and not game[key]]
-        print(f"Game URL: {game.get('url', 'Unknown URL')}")
-        print("WARNING ED: Keys with missing values:", empty_keys)
-        print("WARNING ED: Keys with partially empty dictionaries:", partially_empty_keys)'''
 
         if 'pgn' not in game:
-            print(f"Skipping game due to missing 'pgn' (Bughouse?): {game.get('url', 'Unknown URL')}")
+            #print(f"Skipping game due to missing 'pgn' (Bughouse?): {game.get('url', 'Unknown URL')}")
             continue  # Skip this game if 'pgn' is missing (these are bughouse games or weird ass games)
             
         pgn = game['pgn']
 
         time_control = format_single_time_control(game['time_control'])
+        
         metadata = extract_pgn_metadata(pgn)
 
         date = metadata.get('Date', None)
@@ -402,6 +427,7 @@ def fetch_and_process_game_data(username, engine_path="/opt/homebrew/bin/stockfi
         end_time_est = convert_to_est(end_time)
             
         link = metadata.get('Link', None)
+        #print(f"Link for this game: {link}")
         eco = metadata.get('ECOUrl', None)
         time_spent = calculate_time_difference(start_time, end_time)
         moves = extract_moves_from_pgn(pgn)
@@ -421,6 +447,7 @@ def fetch_and_process_game_data(username, engine_path="/opt/homebrew/bin/stockfi
             'link': link,
             'time_control': time_control,
             'time_class': game['time_class'],
+            'game_type': game['rules'],
             'rated': game['rated'],
             'tcn': game['tcn'],
             'uuid': game['uuid'],
@@ -650,9 +677,48 @@ def clean_dataframe(df, username):
         return h * 3600 + m * 60 + s
 
     def convert_time_class_to_seconds(time_class):
-        # Extract the part before the '+', convert to integer, and multiply by 60 to get seconds
-        base_minutes = int(time_class.split('+')[0].strip())
-        return base_minutes * 60
+        """
+        Converts a time control string into total seconds.
+        Handles formats like '5+5' (base + increment), '5m + 0s', and Chess.com's daily formats like '1/259200'.
+        
+        Args:
+            time_class (str): The time control string.
+        
+        Returns:
+            float or str: Total seconds for the base time or "Weird" if unrecognized.
+        """
+        if 'm' in time_class and '+' in time_class:
+            # Handle formats like '5m + 0s'
+            try:
+                base_part, increment_part = time_class.split('+')
+                base_minutes = int(base_part.replace('m', '').strip())
+                increment_seconds = int(increment_part.replace('s', '').strip())
+                return base_minutes * 60 + increment_seconds
+            except ValueError:
+                return "Weird"
+        
+        if '/' in time_class:
+            # Handle Chess.com's daily format
+            parts = time_class.split('/')
+            if len(parts) == 2 and parts[0].isdigit() and parts[1].isdigit():
+                base_days = int(parts[0]) / (int(parts[1]) / 86400)  # Convert fraction to days in seconds
+                return base_days * 86400
+            else:
+                return "Weird"
+        
+        if '+' in time_class:
+            # Handle formats like '5+5'
+            try:
+                base_minutes = int(time_class.split('+')[0].strip())
+                return base_minutes * 60
+            except ValueError:
+                return "Weird"
+        
+        # Default case for unrecognized formats
+        return "Weird"
+
+
+    
 
     # Calculate time-related columns
     cleaned_df['my_time_left'] = np.where(
@@ -666,14 +732,22 @@ def clean_dataframe(df, username):
     )
     
     cleaned_df['my_num_moves'] = cleaned_df['my_metamoves'].apply(lambda x: len(x) if x else 0)
-          
+
+
+        # Add a safe calculation for ratios, only if time_control is valid
+    def safe_time_left_ratio(row, col_name):
+        time_control_seconds = convert_time_class_to_seconds(row['time_control'])
+        if time_control_seconds == "Weird" or time_control_seconds == 0:
+            return np.nan  # Return NaN for invalid or unrecognized time controls
+        return row[col_name] / time_control_seconds
+    
     cleaned_df['my_time_left_ratio'] = cleaned_df.apply(
-        lambda row: row['my_time_left'] / convert_time_class_to_seconds(row['time_control']),
+        lambda row: safe_time_left_ratio(row, 'my_time_left'),
         axis=1
     )
-
+    
     cleaned_df['opp_time_left_ratio'] = cleaned_df.apply(
-        lambda row: row['opp_time_left'] / convert_time_class_to_seconds(row['time_control']),
+        lambda row: safe_time_left_ratio(row, 'opp_time_left'),
         axis=1
     )
 
@@ -915,27 +989,34 @@ def collect_statistics(df):
 
 
 def get_flag_statistics(cleaned_df):
-    # Filter the data to focus on games where time left is between 0.0 and 5.0 seconds
-    filtered_df = cleaned_df[cleaned_df['my_time_left'] >= 0.0]
-    filtered_df = filtered_df[filtered_df['my_time_left'] <= 5.0]
-    
-    # Filter for wins where 'my_win_or_lose' is 'win' and 'my_time_left' is between 0.1 and 5
-    my_filtered_wins = filtered_df[
-        (filtered_df['my_win_or_lose'] == 'win') &
-        (filtered_df['my_time_left'] >= 0.1) &
-        (filtered_df['my_time_left'] <= 5)
+    # Filter for wins where 'my_win_or_lose' is 'win' (games where you flagged the opponent)
+    my_filtered_wins = cleaned_df[
+        (cleaned_df['my_win_or_lose'] == 'win') &
+        (cleaned_df['my_time_left'] >= 0.1) &
+        (cleaned_df['my_time_left'] <= 5)
     ]
 
-    # Filter for losses where 'my_win_or_lose' is 'lose' and opponent's time is between 0.1 and 5
-    opp_filtered_wins = filtered_df[
-        (filtered_df['my_win_or_lose'] == 'lose') &
-        (filtered_df['opp_time_left'] >= 0.1) &
-        (filtered_df['opp_time_left'] <= 5)
+    # Sort by 'opp_time_left' (ascending) to get the games where you flagged the most
+    top_10_flagged_games = my_filtered_wins.sort_values(by='opp_time_left').head(10)
+
+    # Filter for losses where 'my_win_or_lose' is 'lose' (games where you got flagged)
+    opp_filtered_wins = cleaned_df[
+        (cleaned_df['my_win_or_lose'] == 'win') &
+        (cleaned_df['opp_time_left'] >= 0.1) &
+        (cleaned_df['opp_time_left'] <= 5)
     ]
+
+    # Sort by 'my_time_left' (ascending) to get the games where you were flagged the most
+    top_10_get_flagged_games = opp_filtered_wins.sort_values(by='my_time_left').head(10)
 
     # Print total counts for wins (my and opponent's)
-    print(f"My total flag wins {len(my_filtered_wins)}")
-    print(f"Opponent total flag wins {len(opp_filtered_wins)}")
+    #print(f"My total flag wins: {len(my_filtered_wins)}")
+    #print(f"My total flag losses: {len(opp_filtered_wins)}")
+    #print(f"Top 10 games where I flagged the most (based on opponent's time left):")
+    #print(top_10_flagged_games[['link', 'opp_time_left', 'my_time_left', 'black', 'white']])
+
+    #print(f"Top 10 games where I got flagged the most (based on my time left):")
+    #print(top_10_get_flagged_games[['link', 'opp_time_left', 'my_time_left', 'black', 'white']])
 
     # Group by relevant columns and get counts for both filtered dataframes
     my_flag_counts = my_filtered_wins.groupby(['my_time_left', 'my_win_or_lose', 'link']).size().sort_index()
@@ -944,9 +1025,11 @@ def get_flag_statistics(cleaned_df):
     # Store statistics in a dictionary
     flag_statistics = {
         "my_total_flag_wins": len(my_filtered_wins),
-        "opp_total_flag_wins": len(opp_filtered_wins),
-        "my_flag_counts": my_flag_counts.to_dict(),
-        "opp_flag_counts": opp_flag_counts.to_dict()
+        "my_total_flag_losses": len(opp_filtered_wins),
+        "top_10_flagged_games": top_10_flagged_games[['link', 'opp_time_left', 'my_time_left', 'my_win_or_lose', 'my_color']].to_dict(orient='records'),
+        "top_10_get_flagged_games": top_10_get_flagged_games[['link', 'opp_time_left', 'my_time_left', 'my_win_or_lose', 'my_color']].to_dict(orient='records'),
+        #"my_flag_counts": my_flag_counts.to_dict(),
+        #"opp_flag_counts": opp_flag_counts.to_dict()
     }
 
     # Return the flag statistics dictionary
@@ -1004,7 +1087,7 @@ def plot_game_statistics(cleaned_df, output_dir):
     plt.xlabel('Month')
     plt.ylabel('Frequency of Games')
     plt.xticks(rotation=45)  # Rotate x-axis labels for better visibility
-    plt.savefig(f"{output_dir}Frequency_Year.png")
+    plt.savefig(f"{output_dir}image_1.png")
     plt.show()
 
     # Plotting the frequency of games by weekday
@@ -1014,7 +1097,7 @@ def plot_game_statistics(cleaned_df, output_dir):
     plt.xlabel('Weekday')
     plt.ylabel('Frequency of Games')
     plt.xticks(rotation=45)
-    plt.savefig(f"{output_dir}Frequency_Months.png")
+    plt.savefig(f"{output_dir}image_2.png")
     plt.show()
 
     # Plotting the frequency of games by hour
@@ -1024,7 +1107,7 @@ def plot_game_statistics(cleaned_df, output_dir):
     plt.xlabel('Hour of Day')
     plt.ylabel('Frequency of Games')
     plt.xticks(rotation=45)
-    plt.savefig(f"{output_dir}Frequency_Hours.png")
+    plt.savefig(f"{output_dir}image_3.png")
     plt.show()
 
 
@@ -1046,14 +1129,14 @@ def plot_opening_statistics(cleaned_df, output_dir):
     print(f"NaN values in 'time_class': {cleaned_df['time_class'].isna().sum()}")
     
     # Print unique values for each column to inspect the data
-    print("\nUnique values in 'my_time_left':")
+    '''print("\nUnique values in 'my_time_left':")
     print(cleaned_df['my_time_left'].unique())
     
     print("\nUnique values in 'my_win_or_lose':")
     print(cleaned_df['my_win_or_lose'].unique())
     
     print("\nUnique values in 'time_class':")
-    print(cleaned_df['time_class'].unique())
+    print(cleaned_df['time_class'].unique())'''
 
     
     opening_stats = cleaned_df.groupby(['eco', 'my_win_or_lose']).size().unstack(fill_value=0)
@@ -1596,14 +1679,14 @@ def plot_game_outcome_by_time_left(cleaned_df, output_dir):
     print(f"NaN values in 'time_class': {cleaned_df['time_class'].isna().sum()}")
     
     # Print unique values for each column to inspect the data
-    print("\nUnique values in 'my_time_left':")
-    print(cleaned_df['my_time_left'].unique())
+    # print("\nUnique values in 'my_time_left':")
+    # print(cleaned_df['my_time_left'].unique())
     
-    print("\nUnique values in 'my_win_or_lose':")
-    print(cleaned_df['my_win_or_lose'].unique())
+    # print("\nUnique values in 'my_win_or_lose':")
+    # print(cleaned_df['my_win_or_lose'].unique())
     
-    print("\nUnique values in 'time_class':")
-    print(cleaned_df['time_class'].unique())
+    # print("\nUnique values in 'time_class':")
+    # print(cleaned_df['time_class'].unique())
 
     
     cleaned_df = cleaned_df.sort_values('my_time_left')
@@ -1806,19 +1889,19 @@ def drop_columns(df):
 
 def main(username):
     global testing_df
-    print("My Chesslyzer!!!")
+    print("Chesslyzer booting...!!!")
     
     start_time = time.time()
     
     df = fetch_and_process_game_data(username)
     cleaned_df = clean_dataframe(df, username)
-    print(cleaned_df['my_num_moves'].head())
-    print(cleaned_df['my_moves'].head())
+    cleaned_df = cleaned_df[cleaned_df['rules'] == 'chess']
+    #print(cleaned_df['my_num_moves'].head())
+    #print(cleaned_df['my_moves'].head())
     
 
     
     statistics = total_statistics(cleaned_df)
-    
     
     more_statistics = collect_statistics(cleaned_df)
     print(more_statistics.keys())
@@ -1836,28 +1919,28 @@ def main(username):
 
 
     final_df = drop_columns(cleaned_df)
-    final_df.to_csv(f'{username}.csv', index=False)
+    final_df.to_csv(f'csv/{username}.csv', index=False)
     
     plot_game_statistics(final_df, output_dir)
-    plot_opening_statistics(cleaned_df, output_dir)
-    plot_time_control_statistics(cleaned_df, output_dir)
-    plot_time_class_statistics(cleaned_df, output_dir)
-    plot_scaled_rating_difference_by_outcome(cleaned_df, output_dir)
+    #plot_opening_statistics(cleaned_df, output_dir)
+    #plot_time_control_statistics(cleaned_df, output_dir)
+    #plot_time_class_statistics(cleaned_df, output_dir)
+    #plot_scaled_rating_difference_by_outcome(cleaned_df, output_dir)
     
-    plot_game_outcome_by_hour(cleaned_df, output_dir)
-    plot_game_outcome_by_day(cleaned_df, output_dir)
-    plot_game_outcome_by_month(cleaned_df, output_dir)
+    #plot_game_outcome_by_hour(cleaned_df, output_dir)
+    #plot_game_outcome_by_day(cleaned_df, output_dir)
+    #plot_game_outcome_by_month(cleaned_df, output_dir)
 
-    plot_win_percentage_vs_opp_rating(cleaned_df, output_dir)
-    plot_moves_vs_game_outcome(cleaned_df, output_dir)
-    plot_win_rate_vs_num_moves(cleaned_df, output_dir)
-    plot_scaled_rating_difference_by_outcome(cleaned_df, output_dir)
+    #plot_win_percentage_vs_opp_rating(cleaned_df, output_dir)
+    #plot_moves_vs_game_outcome(cleaned_df, output_dir)
+    #plot_win_rate_vs_num_moves(cleaned_df, output_dir)
+    #plot_scaled_rating_difference_by_outcome(cleaned_df, output_dir)
 
-    plot_game_outcome_by_time_left(cleaned_df, output_dir)
-    plot_win_ratio_heatmap_by_castling(cleaned_df, output_dir)
-    plot_game_count_heatmap_by_castling(cleaned_df, output_dir)
+    #plot_game_outcome_by_time_left(cleaned_df, output_dir)
+    #plot_win_ratio_heatmap_by_castling(cleaned_df, output_dir)
+    #plot_game_count_heatmap_by_castling(cleaned_df, output_dir)
 
-    plot_rating_progression_over_time(cleaned_df, output_dir)
+    #plot_rating_progression_over_time(cleaned_df, output_dir)
 
         
     testing_df = final_df.copy()
@@ -1873,7 +1956,7 @@ if __name__ == "__main__":
         main(username)
     else:
         print("Usage: python chesslytics.py <username>")'''
-    username = "Laightning"
+    username = "joebruin"
     main(username)
 
 
@@ -1890,7 +1973,7 @@ from PIL import Image
 Image.MAX_IMAGE_PIXELS = None  # Disable the limit
 
 
-def combine_images_to_pdf(input_dir="images", output_file="combined_images.pdf"):
+def combine_images_to_pdf(input_dir="static/images", output_file="combined_images.pdf"):
     # Get all PNG files in the specified directory
     png_files = sorted([os.path.join(input_dir, f) for f in os.listdir(input_dir) if f.endswith('.png')], key=os.path.getctime)
     
@@ -1910,7 +1993,7 @@ def combine_images_to_pdf(input_dir="images", output_file="combined_images.pdf")
     print(f"Combined PDF saved as {output_file}")
 
 # Usage: Just call the function with the images directory and desired output file name
-combine_images_to_pdf(input_dir='images', output_file=f'images/{username}_combined_output.pdf')
+combine_images_to_pdf(input_dir='static/images', output_file=f'pdf/{username}_ChessLytics.pdf')
 
 
 
@@ -1918,3 +2001,8 @@ combine_images_to_pdf(input_dir='images', output_file=f'images/{username}_combin
 ### no value for either time_control or my_win_or_lose i think (or the time_control or my_win_or_lose fields are missing/NaN.)
 
 #time left and game count
+
+#goals to organize all the visualization functions and the extraction functions into another notebook
+
+
+
