--- a/README
+++ b/README
@@ -20,3 +20,5 @@ source venv/bin/activate
 #next step to split my chesslytics.py into those 3 to make stat extraction easier
 
 # pip install -r requirements.txt
+
+# pip-compile requirements.in
