--- a/testing_grounds.ipynb
+++ b/testing_grounds.ipynb
@@ -60,7 +60,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"/Users/edwardlai/anaconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3553, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/var/folders/39/n8p80q7s1b13_khp67kt_dlw0000gn/T/ipykernel_44825/1852858922.py\", line 1, in <module>\n",
+      "  File \"/var/folders/39/n8p80q7s1b13_khp67kt_dlw0000gn/T/ipykernel_49331/1852858922.py\", line 1, in <module>\n",
       "    from data_processing import *\n",
       "  File \"/Users/edwardlai/Documents/GitHub/chesslyzer/data_processing.py\", line 179, in <module>\n",
       "    import pandas as pd\n",
@@ -138,7 +138,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"/Users/edwardlai/anaconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3553, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/var/folders/39/n8p80q7s1b13_khp67kt_dlw0000gn/T/ipykernel_44825/1852858922.py\", line 1, in <module>\n",
+      "  File \"/var/folders/39/n8p80q7s1b13_khp67kt_dlw0000gn/T/ipykernel_49331/1852858922.py\", line 1, in <module>\n",
       "    from data_processing import *\n",
       "  File \"/Users/edwardlai/Documents/GitHub/chesslyzer/data_processing.py\", line 179, in <module>\n",
       "    import pandas as pd\n",
@@ -216,7 +216,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"/Users/edwardlai/anaconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3553, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/var/folders/39/n8p80q7s1b13_khp67kt_dlw0000gn/T/ipykernel_44825/1852858922.py\", line 1, in <module>\n",
+      "  File \"/var/folders/39/n8p80q7s1b13_khp67kt_dlw0000gn/T/ipykernel_49331/1852858922.py\", line 1, in <module>\n",
       "    from data_processing import *\n",
       "  File \"/Users/edwardlai/Documents/GitHub/chesslyzer/data_processing.py\", line 179, in <module>\n",
       "    import pandas as pd\n",
@@ -310,7 +310,7 @@
       "    if await self.run_code(code, result, async_=asy):\n",
       "  File \"/Users/edwardlai/anaconda3/lib/python3.11/site-packages/IPython/core/interactiveshell.py\", line 3553, in run_code\n",
       "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/var/folders/39/n8p80q7s1b13_khp67kt_dlw0000gn/T/ipykernel_44825/1852858922.py\", line 1, in <module>\n",
+      "  File \"/var/folders/39/n8p80q7s1b13_khp67kt_dlw0000gn/T/ipykernel_49331/1852858922.py\", line 1, in <module>\n",
       "    from data_processing import *\n",
       "  File \"/Users/edwardlai/Documents/GitHub/chesslyzer/data_processing.py\", line 179, in <module>\n",
       "    import pandas as pd\n",
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "76175aa4-fa15-4f0b-819d-8a5722c33ace",
    "metadata": {},
    "outputs": [
@@ -365,56 +365,36 @@
      "output_type": "stream",
      "text": [
       "Chesslyzer booting...!!!\n",
-      "kingside_castles: 2121\n",
-      "queenside_castles: 290\n",
-      "no_castles: 378\n",
+      "castling_counts: my_castling\n",
+      "kingside     2121\n",
+      "none          378\n",
+      "queenside     290\n",
+      "Name: count, dtype: int64\n",
       "total_time_spent: 1481484\n",
       "total_moves: 104084\n",
-      "total_win: 1705\n",
-      "total_draw: 95\n",
-      "total_loss: 984\n",
-      "total_checkmated: 399\n",
-      "total_timeout: 568\n",
-      "total_timevsinsufficient: 42\n",
-      "total_resigned: 16\n",
-      "total_stalemate: 13\n",
-      "total_repetition: 34\n",
-      "total_abandoned: 1\n",
-      "total_insufficient: 6\n",
+      "total_win_draw_loss: my_win_or_lose\n",
+      "win     1705\n",
+      "lose     989\n",
+      "draw      95\n",
+      "Name: count, dtype: int64\n",
+      "total_results: my_result\n",
+      "win                   1705\n",
+      "timeout                568\n",
+      "checkmated             399\n",
+      "timevsinsufficient      42\n",
+      "repetition              34\n",
+      "resigned                16\n",
+      "stalemate               13\n",
+      "insufficient             6\n",
+      "agreed                   5\n",
+      "abandoned                1\n",
+      "Name: count, dtype: int64\n",
       "total_en_passant: 0\n",
       "total_promotions: 375\n",
       "total_games: 2789\n",
-      "my_total_flag_wins: 245\n",
-      "my_total_flag_losses: 89\n",
-      "top_10_flagged_games: [{'link': 'https://www.chess.com/game/live/98402191485', 'opp_time_left': 0.0, 'my_time_left': 1.5, 'my_win_or_lose': 'win', 'my_color': 'black'}, {'link': 'https://www.chess.com/game/live/112181466233', 'opp_time_left': 0.0, 'my_time_left': 4.8, 'my_win_or_lose': 'win', 'my_color': 'black'}, {'link': 'https://www.chess.com/game/live/112342829237', 'opp_time_left': 0.0, 'my_time_left': 1.0, 'my_win_or_lose': 'win', 'my_color': 'black'}, {'link': 'https://www.chess.com/game/live/112420820635', 'opp_time_left': 0.0, 'my_time_left': 4.0, 'my_win_or_lose': 'win', 'my_color': 'white'}, {'link': 'https://www.chess.com/game/live/112421386785', 'opp_time_left': 0.0, 'my_time_left': 1.7, 'my_win_or_lose': 'win', 'my_color': 'white'}, {'link': 'https://www.chess.com/game/live/112422655387', 'opp_time_left': 0.0, 'my_time_left': 3.3, 'my_win_or_lose': 'win', 'my_color': 'black'}, {'link': 'https://www.chess.com/game/live/112423199551', 'opp_time_left': 0.0, 'my_time_left': 4.6, 'my_win_or_lose': 'win', 'my_color': 'black'}, {'link': 'https://www.chess.com/game/live/112423235171', 'opp_time_left': 0.0, 'my_time_left': 1.8, 'my_win_or_lose': 'win', 'my_color': 'white'}, {'link': 'https://www.chess.com/game/live/112426786555', 'opp_time_left': 0.0, 'my_time_left': 3.6, 'my_win_or_lose': 'win', 'my_color': 'white'}, {'link': 'https://www.chess.com/game/live/112429810397', 'opp_time_left': 0.0, 'my_time_left': 4.0, 'my_win_or_lose': 'win', 'my_color': 'white'}]\n",
-      "top_10_get_flagged_games: [{'link': 'https://www.chess.com/game/live/112609789651', 'opp_time_left': 1.1, 'my_time_left': 0.4, 'my_win_or_lose': 'win', 'my_color': 'white'}, {'link': 'https://www.chess.com/game/live/108715762821', 'opp_time_left': 2.8, 'my_time_left': 0.5, 'my_win_or_lose': 'win', 'my_color': 'white'}, {'link': 'https://www.chess.com/game/live/106464455389', 'opp_time_left': 2.7, 'my_time_left': 0.6, 'my_win_or_lose': 'win', 'my_color': 'black'}, {'link': 'https://www.chess.com/game/live/103443137087', 'opp_time_left': 0.6, 'my_time_left': 0.6, 'my_win_or_lose': 'win', 'my_color': 'white'}, {'link': 'https://www.chess.com/game/live/113880596753', 'opp_time_left': 1.1, 'my_time_left': 0.6, 'my_win_or_lose': 'win', 'my_color': 'white'}, {'link': 'https://www.chess.com/game/live/115888801847', 'opp_time_left': 4.7, 'my_time_left': 0.7, 'my_win_or_lose': 'win', 'my_color': 'black'}, {'link': 'https://www.chess.com/game/live/101206979607', 'opp_time_left': 2.8, 'my_time_left': 0.7, 'my_win_or_lose': 'win', 'my_color': 'black'}, {'link': 'https://www.chess.com/game/live/117617371785', 'opp_time_left': 1.0, 'my_time_left': 0.7, 'my_win_or_lose': 'win', 'my_color': 'white'}, {'link': 'https://www.chess.com/game/live/108640879431', 'opp_time_left': 1.9, 'my_time_left': 0.8, 'my_win_or_lose': 'win', 'my_color': 'white'}, {'link': 'https://www.chess.com/game/live/109316411115', 'opp_time_left': 3.3, 'my_time_left': 0.9, 'my_win_or_lose': 'win', 'my_color': 'black'}]\n",
-      "most_played_openings:                         eco  win_rate  Games_Played\n",
-      "0   Alapin-Sicilian-Defense  0.602410           249\n",
-      "17        Giuoco-Piano-Game  0.638655           238\n",
-      "20             Italian-Game  0.672131           183\n",
-      "16           French-Defense  0.612360           178\n",
-      "19              Indian-Game  0.641176           170\n",
-      "win_loss_draw_percentages: {'win_percentage': np.float64(61.13302258874148), 'loss_percentage': np.float64(35.460738615991396), 'draw_percentage': np.float64(3.4062387952671207)}\n",
-      "streaks: {'winning_streak': 25, 'losing_streak': 8}\n",
-      "quickest_checkmate:             date moves my_rating opp_rating  my_num_moves  \\\n",
-      "1530  2024.05.22    []      2205       2255             0   \n",
-      "1634  2024.05.31    []      2205        366             0   \n",
-      "\n",
-      "                                              link  \n",
-      "1530  https://www.chess.com/game/live/110091057621  \n",
-      "1634  https://www.chess.com/game/live/110854317093  \n",
-      "total_time_spent: 411.5233333333333\n",
-      "best_game_by_rating:             date                                              moves my_rating  \\\n",
-      "1147  2024.04.10  [e4, e5, Bc4, d6, Nf3, Be7, d4, f6, Nh4, Nh6, ...      2209   \n",
-      "\n",
-      "     opp_rating  my_num_moves                                          link  \n",
-      "1147        100            13  https://www.chess.com/game/live/106464412525  \n",
-      "most_played_opponent:               Opponent  Games_Played\n",
-      "0          Gerberbaby3            72\n",
-      "1         MauntainGoat            65\n",
-      "2             sepehr91            27\n",
-      "3  accidental_genius23            24\n",
-      "4           saltyclown            22\n",
+      "longest_winning_streak: 25\n",
+      "longest_losing_streak: 8\n",
+      "most_played_opponent: Gerberbaby3\n",
       "Index(['url', 'moves', 'date', 'start_time_est', 'end_time_est', 'time_spent',\n",
       "       'link', 'time_control', 'time_class', 'game_type', 'rated', 'tcn',\n",
       "       'uuid', 'initial_setup', 'fen', 'rules', 'white_username',\n",
@@ -427,7 +407,7 @@
       "       'opp_castling', 'en_passant_count', 'promotion_count', 'num_moves',\n",
       "       'rating_diff'],\n",
       "      dtype='object')\n",
-      "Execution time: 3.79 seconds\n"
+      "Execution time: 4.34 seconds\n"
      ]
     }
    ],
@@ -457,6 +437,7 @@
     "    stats_df = pd.DataFrame(statistics, index=[0])\n",
     "    #more_stats_df = pd.DataFrame(more_statistics, index=[0])\n",
     "    #flag_stats_df = pd.DataFrame(flag_statistics, index=[0])\n",
+    "    stats_df.to_csv('statistics.csv', index=False) \n",
     "    \n",
     "    # Concatenate all dataframes along the columns (axis=1)\n",
     "    #final_stats_df = pd.concat([stats_df, more_stats_df, flag_stats_df], axis=1)\n",
@@ -466,10 +447,10 @@
     "    \n",
     "    for stat, value in statistics.items():\n",
     "        print(f\"{stat}: {value}\")\n",
-    "    for stat, value in flag_statistics.items():\n",
-    "        print(f\"{stat}: {value}\")\n",
-    "    for stat, value in more_statistics.items():\n",
-    "        print(f\"{stat}: {value}\")\n",
+    "    #for stat, value in flag_statistics.items():\n",
+    "        #print(f\"{stat}: {value}\")\n",
+    "    #for stat, value in more_statistics.items():\n",
+    "        #print(f\"{stat}: {value}\")\n",
     "\n",
     "    final_df = drop_columns(cleaned_df)\n",
     "    final_df.to_csv(f'csv/{username}.csv', index=False)\n",
@@ -491,6 +472,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3b70bf98-ec3d-480c-8593-ccdf0351b65c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19002f57-23b2-4bcc-af5a-77d157125231",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c750402-5b1a-4e4a-ad01-e44e0ab25726",
    "metadata": {},
    "outputs": [],
    "source": []
